--- a/backend/package.json
+++ b/backend/package.json
@@ -4,13 +4,16 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "setup": "npm i",
+    "start": "nodemon -e js -x node server.js",
+    "dev": "nodemon -e js -x node --inspect server.js"
   },
   "author": "Kim H. Nguyen <knguyen1@paypal.com> (http://github.paypal.com/knguyen1)",
   "license": "MIT",
   "dependencies": {
     "express": "4.16.4",
     "express-graphql": "0.7.1",
-    "graphql": "14.0.2"
+    "graphql": "14.0.2",
+    "nodemon": "1.18.5"
   }
 }
